tests/invalid/trait/method_generic_trait_method_bound_mismatch.facet
trait Show {}
trait Debug {}

impl Show for unrestricted bool;
impl Debug for unrestricted bool;

trait Project<T> {
  fn project<U>(self: Self, value: unrestricted U) -> unrestricted U
    where U: Show;
}

impl Project<unrestricted isize> for unrestricted isize {
  fn project<U>(self: Self, value: unrestricted U) -> unrestricted U
    where U: Debug {
    value
  }
}

fn main(x: unrestricted isize) -> unrestricted bool {
  (<unrestricted isize as Project<unrestricted isize>>::project<unrestricted bool> x true)
}
